# translator_mangler

./: Cargo.toml  LICENSE  README-zh.md  README.md
src/: lib.rs  main.rs
src/mangler/: mod.rs
src/translator/: baidu.rs  google.rs  mod.rs  youdao.rs
