[package]
name = "translator_mangler"
description = "Mangle your input text by translating it over and over again."
version = "0.4.1"
edition = "2021"
authors = [ "Rong Bao <baorong2005@126.com>" ]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/CSharperMantle/translator_mangler"

[dependencies]
hex = "0.4.3"
inquire = "0.6.0"
md-5 = "0.10.5"
fastrand = "1.9.0"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
sha2 = "0.10.6"

[lib]
name = "translator_mangler"
path = "src/lib.rs"

[[bin]]
name = "translator_mangler_cli"
path = "src/bin/cli.rs"
